--- a/src/components/layouts/main.module.scss
+++ b/src/components/layouts/main.module.scss
@@ -15,7 +15,7 @@
 
 .content {
   padding: $gap-24;
-  overflow-y: scroll;
+  overflow-y: auto;
   height: 100vh;
   width: 100%;
 
